
plugins {
    id 'java'
	id 'groovy'
}

repositories {
	if (maven_local_repo) {
	    maven {
			url maven_local_repo
		} 
	} else {
		mavenLocal()
	}
	if (System.env.NEXUS_REPO_ALL_URL) {
		maven {
			credentials {
				username System.env.NEXUS_USER
				password System.env.NEXUS_PASSWORD
			}
			url = uri(System.env.NEXUS_REPO_ALL_URL)
		}
	} else {
		maven {
			url = uri('https://repo.maven.apache.org/maven2/')
		}
	}
}

dependencies {
    implementation 'org.codehaus.groovy:groovy:3.0.7'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

group = 'de.fekl'
version = '1.0.0'
description = 'af-fe'
java.sourceCompatibility = JavaVersion.VERSION_15

compileJava {
    options.compilerArgs += ['--enable-preview']
}
compileTestJava {
	options.compilerArgs += ['--enable-preview']
}
test {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
}
